build/log/idf_py_stdout_output_10541
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/aronimo/Desktop/esp32_mqtt_panel/build/bootloader && /home/aronimo/.espressif/python_env/idf6.1_py3.13_env/bin/python /home/aronimo/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/aronimo/Desktop/esp32_mqtt_panel/build/bootloader/bootloader.bin
Bootloader binary size 0x66a0 bytes. 0x960 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp32_mqtt_panel.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/esp32_mqtt_panel.c.obj 
/home/aronimo/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2028-g94c20b3ba7\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DMBEDTLS_MAJOR_VERSION=4 -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DTF_PSA_CRYPTO_USER_CONFIG_FILE=\"mbedtls/esp_config.h\" -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/aronimo/Desktop/esp32_mqtt_panel/build/config -I/home/aronimo/Desktop/esp32_mqtt_panel/main -I/home/aronimo/esp-idf/components/esp_libc/platform_include -I/home/aronimo/esp-idf/components/freertos/config/include -I/home/aronimo/esp-idf/components/freertos/config/include/freertos -I/home/aronimo/esp-idf/components/freertos/config/xtensa/include -I/home/aronimo/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/aronimo/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/aronimo/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/aronimo/esp-idf/components/freertos/esp_additions/include -I/home/aronimo/esp-idf/components/esp_hw_support/include -I/home/aronimo/esp-idf/components/esp_hw_support/include/soc -I/home/aronimo/esp-idf/components/esp_hw_support/dma/include -I/home/aronimo/esp-idf/components/esp_hw_support/ldo/include -I/home/aronimo/esp-idf/components/esp_hw_support/debug_probe/include -I/home/aronimo/esp-idf/components/esp_hw_support/etm/include -I/home/aronimo/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/aronimo/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/aronimo/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/aronimo/esp-idf/components/esp_hw_support/power_supply/include -I/home/aronimo/esp-idf/components/esp_hw_support/modem/include -I/home/aronimo/esp-idf/components/esp_hw_support/port/esp32/. -I/home/aronimo/esp-idf/components/esp_hw_support/port/esp32/include -I/home/aronimo/esp-idf/components/heap/include -I/home/aronimo/esp-idf/components/heap/tlsf -I/home/aronimo/esp-idf/components/log/include -I/home/aronimo/esp-idf/components/soc/include -I/home/aronimo/esp-idf/components/soc/esp32 -I/home/aronimo/esp-idf/components/soc/esp32/include -I/home/aronimo/esp-idf/components/soc/esp32/register -I/home/aronimo/esp-idf/components/hal/platform_port/include -I/home/aronimo/esp-idf/components/hal/esp32/include -I/home/aronimo/esp-idf/components/hal/include -I/home/aronimo/esp-idf/components/esp_rom/include -I/home/aronimo/esp-idf/components/esp_rom/esp32/include -I/home/aronimo/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/aronimo/esp-idf/components/esp_rom/esp32 -I/home/aronimo/esp-idf/components/esp_common/include -I/home/aronimo/esp-idf/components/esp_system/include -I/home/aronimo/esp-idf/components/esp_system/port/soc -I/home/aronimo/esp-idf/components/esp_system/port/include/private -I/home/aronimo/esp-idf/components/esp_stdio/include -I/home/aronimo/esp-idf/components/xtensa/esp32/include -I/home/aronimo/esp-idf/components/xtensa/include -I/home/aronimo/esp-idf/components/xtensa/deprecated_include -I/home/aronimo/esp-idf/components/esp_hal_dma/include -I/home/aronimo/esp-idf/components/esp_hal_gpio/include -I/home/aronimo/esp-idf/components/esp_hal_gpio/esp32/include -I/home/aronimo/esp-idf/components/esp_hal_usb/include -I/home/aronimo/esp-idf/components/esp_hal_pmu/include -I/home/aronimo/esp-idf/components/esp_hal_pmu/esp32/include -I/home/aronimo/esp-idf/components/esp_hal_ana_conv/include -I/home/aronimo/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/aronimo/esp-idf/components/esp_hal_i2s/include -I/home/aronimo/esp-idf/components/esp_hal_i2s/esp32/include -I/home/aronimo/esp-idf/components/lwip/include -I/home/aronimo/esp-idf/components/lwip/include/apps -I/home/aronimo/esp-idf/components/lwip/lwip/src/include -I/home/aronimo/esp-idf/components/lwip/port/include -I/home/aronimo/esp-idf/components/lwip/port/freertos/include -I/home/aronimo/esp-idf/components/lwip/port/esp32xx/include -I/home/aronimo/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/aronimo/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/aronimo/esp-idf/components/esp_wifi/include -I/home/aronimo/esp-idf/components/esp_wifi/include/local -I/home/aronimo/esp-idf/components/esp_wifi/wifi_apps/include -I/home/aronimo/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/aronimo/esp-idf/components/esp_event/include -I/home/aronimo/esp-idf/components/esp_phy/include -I/home/aronimo/esp-idf/components/esp_phy/esp32/include -I/home/aronimo/esp-idf/components/esp_netif/include -I/home/aronimo/esp-idf/components/nvs_flash/include -I/home/aronimo/esp-idf/components/esp_partition/include -I/home/aronimo/esp-idf/components/esp_blockdev/include -I/home/aronimo/esp-idf/components/esp_driver_gpio/include -I/home/aronimo/Desktop/esp32_mqtt_panel/components/esp-mqtt/include -I/home/aronimo/esp-idf/components/tcp_transport/include -I/home/aronimo/esp-idf/components/esp-tls -I/home/aronimo/esp-idf/components/esp-tls/esp-tls-crypto -I/home/aronimo/esp-idf/components/mbedtls/port/include -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/include -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/library -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/core -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/src -I/home/aronimo/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/aronimo/esp-idf/components/mbedtls/port/psa_driver/include -I/home/aronimo/esp-idf/components/esp_security/include -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/include -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/include -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/everest/include -I/home/aronimo/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/p256-m -I/home/aronimo/esp-idf/components/esp_timer/include @"/home/aronimo/Desktop/esp32_mqtt_panel/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/aronimo/Desktop/esp32_mqtt_panel=. -fmacro-prefix-map=/home/aronimo/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/esp32_mqtt_panel.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/esp32_mqtt_panel.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/esp32_mqtt_panel.c.obj -c /home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c: In function 'wifi_init':
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c:51:17: error: implicit declaration of function 'LEDBlink' [-Wimplicit-function-declaration]
   51 |                 LEDBlink(2, 200, 200);
      |                 ^~~~~~~~
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c: At top level:
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c:59:6: error: conflicting types for 'LEDBlink'; have 'void(uint8_t,  uint8_t,  uint8_t)' {aka 'void(unsigned char,  unsigned char,  unsigned char)'} [-Werror]
   59 | void LEDBlink(uint8_t times, uint8_t onDelay, uint8_t offDelay)
      |      ^~~~~~~~
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c:51:17: note: previous implicit declaration of 'LEDBlink' with type 'void(uint8_t,  uint8_t,  uint8_t)' {aka 'void(unsigned char,  unsigned char,  unsigned char)'}
   51 |                 LEDBlink(2, 200, 200);
      |                 ^~~~~~~~
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c: In function 'mqtt_event_handler':
/home/aronimo/Desktop/esp32_mqtt_panel/main/esp32_mqtt_panel.c:91:13: error: implicit declaration of function 'blink_led' [-Wimplicit-function-declaration]
   91 |             blink_led();
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
